--- a/projects.html
+++ b/projects.html
@@ -63,14 +63,11 @@ header .navbar li.active a:not(.dropdown li a) {
 	letter-spacing: 3px;
 }
 
-<<<<<<< HEAD
 .item{
 	width: 34rem !important;
 	height: 48rem !important;
   }
 
-=======
->>>>>>> d7f52207821797d7bdfb4db81170271d0a9ee617
 .row .items li {
  width:31%;
  border:1.5px solid rgb(165, 126, 187);
@@ -80,10 +77,7 @@ padding:10px;
 margin-right:20px;
 margin-bottom: 30px;
 border-radius: 8px;
-<<<<<<< HEAD
 height:550px;
-=======
->>>>>>> d7f52207821797d7bdfb4db81170271d0a9ee617
 }
 
 .row .items li img {
@@ -94,10 +88,7 @@ margin-bottom:10px;
 .row .items li p {
 color:darkslategray;
 letter-spacing: 1.5px;
-<<<<<<< HEAD
 font-size: 16px;
-=======
->>>>>>> d7f52207821797d7bdfb4db81170271d0a9ee617
 }
   @media(max-width:1000px) {
 
@@ -203,7 +194,7 @@ font-size: 10px;
 @media (min-width:340px) and (max-width:390px){
   
   .item {
-    width: 13rem !important;
+    width: 14rem !important;
     height: 48rem !important;
 }
 
@@ -218,7 +209,7 @@ height: 150px;
 @media (min-width:390px) and (max-width:480px){
   
   .item {
-    width: 18.5rem !important;
+    width: 17rem !important;
     height: 48rem !important;
 }
 
@@ -352,7 +343,7 @@ ul.row hr {
         <div class="row">
           
           <ul class="row">
-          <h3><span style="color:#1aa6be">Projects</span></h3>  
+          <h3><span style="color:#1aa6be;text-decoration: underline;">Projects</span></h3>  
           <hr style="width:80px;height:2px;background:#1aa6be"><br>
       
           <ul class="items col-4 row">
