--- a/contact.html
+++ b/contact.html
@@ -67,6 +67,26 @@ header .navbar li.active a:not(.dropdown li a) {
   border-bottom:1px solid grey;	
 }
 }
+
+@media (min-width:700px) and (max-width:1000px){ 
+.ownmenu ul.dropdown li a {
+		padding:10px !important;
+		font-size:10px;
+		
+		color: #ededed;
+		border-bottom:1px solid grey;	
+	}
+}
+
+@media (min-width:1000px) and (max-width:1199px){ 
+.ownmenu ul.dropdown li a {
+		padding:10px !important;
+		font-size:11px;
+		
+		color: #ededed;
+		border-bottom:1px solid grey;	
+	}
+}
   </style>
 </head>
 <body>
@@ -238,7 +258,7 @@ header .navbar li.active a:not(.dropdown li a) {
       <div class="row"> 
         
         <div class="col-md-3">
-          <img  class="img-responsive" src="images/lh_header_001.png" alt="" width="30%">
+          <img  class="img-responsive" id="img-footer" src="images/lh_header_001.png" alt="" width="30%">
            <p style="font-size:15px;letter-spacing: 1px; font-family:'Segoe UI', Tahoma, Geneva'">Govind & company steel builders and contractors is engaged in the design, fabrication and erection of specialized steel structures like spaceframes, PEB.
            </p>
           </div>
