--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
     <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
 <![endif]-->
-</head>
+
 
 <style>
 body {
@@ -327,7 +327,35 @@ margin-left: 12px;
 }
 
 }
+
+@media (min-width:992px) and (max-width:1200px){
+
+.col-md-5 {
+  width: 99% !important; 
+}
+}
+
+@media (min-width:700px) and (max-width:1000px){ 
+.ownmenu ul.dropdown li a {
+		padding:10px !important;
+		font-size:10px;
+		
+		color: #ededed;
+		border-bottom:1px solid grey;	
+	}
+}
+
+@media (min-width:1000px) and (max-width:1199px){ 
+.ownmenu ul.dropdown li a {
+		padding:10px !important;
+		font-size:11px;
+		
+		color: #ededed;
+		border-bottom:1px solid grey;	
+	}
+}
 </style>
+</head>
 <body>
 
 <!-- Wrap -->
@@ -489,7 +517,7 @@ margin-left: 12px;
       <div class="row"> 
         
        <div class="col-md-3">
-            <img  class="img-responsive" src="images/lh_header_001.png" alt="" width="30%">
+            <img  class="img-responsive" id="img-footer" src="images/lh_header_001.png" alt="" width="30%">
              <p style="font-family:'Segoe UI', Tahoma, Geneva;letter-spacing:1px;">Govind & company steel builders and contractors is engaged in the design, fabrication and erection of specialized steel structures like spaceframes, PEB.
              </p>
        </div>
