--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
 <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css">
 <link href="css/ionicons.min.css" rel="stylesheet">
 <link href="css/main.css" rel="stylesheet">
-<link href="css/style.css" rel="stylesheet">
-<link href="css/responsive.css" rel="stylesheet">
+
 
 <!-- Online Fonts -->
 <link href='https://fonts.googleapis.com/css?family=Oswald:400,300,700' rel='stylesheet' type='text/css'>
@@ -515,14 +514,14 @@ hr.main {
 .latest-work .filter li a.active {
 	color: #ffc107
 }
-.latest-work .items.row{
+.latest-work .items2.row{
 	margin:0 -5px;
 }
-.latest-work .col-4 .item {
+.latest-work .col-4 .item2 {
 	width: 25%;
 	padding:5px;
 }
-.gal-item .hover-info {
+.gal-item2 .hover-info {
 	position: absolute;
 	background: rgba(51,51,51,0.9);
 	z-index: 9;
@@ -540,19 +539,19 @@ hr.main {
 	-ms-transition: all 0.4s ease-in-out;
 	transition: all 0.4s ease-in-out;
 }
-.gal-item .hover-info h6{
+.gal-item2 .hover-info h6{
 	font-weight:200;
 	color:#fff;
 	margin:0px;
 	margin-bottom:6px;
 	font-size:14px;	
 }
-.gal-item .hover-info p{
+.gal-item2 .hover-info p{
 	color:#fff;
 	margin:0px;
 	font-size:13px;	
 }
-.gal-item .hover-info a {
+.gal-item2 .hover-info a {
 	color: rgba(255,255,255,0.8);
 	font-size: 20px;
 	display: inline-block;
@@ -561,18 +560,18 @@ hr.main {
 	top:15px;
 	opacity:0.6;
 }
-.gal-item .hover-info a:hover{
+.gal-item2 .hover-info a:hover{
 	color:#fff;
 	opacity:1;
 }
-.gal-item:hover .hover-info a{
+.gal-item2:hover .hover-info a{
 	color: #fff;
 	right:20px;
 }
-.gal-item:hover .hover-info {
+.gal-item2:hover .hover-info {
 	opacity: 1;
 }
-.gal-item {
+.gal-item2 {
 	position: relative;
 	overflow: hidden;
 	width: 100%;
@@ -1935,7 +1934,7 @@ header {
 	width: 100%;
 	text-align: center;
 }
-.latest-work .col-4 .item {
+.latest-work .col-4 .item2 {
 	width: 33.3333%;
 }
 .team ul li {
@@ -2039,7 +2038,7 @@ header .ownmenu ul.dropdown li a {
 	display: inline-block;
 	text-align: left;
 }
-.portfolio.style-2 li.item {
+.portfolio.style-2 li.item2 {
 	width: 50% !important;
 }
 .counter ul li {
@@ -2193,7 +2192,7 @@ header .quotes a {
 	width: 100%;
 	text-align: center;
 }
-.latest-work .col-4 .item {
+.latest-work .col-4 .item2 {
 	width: 33.3333%;
 }
 .team ul li {
@@ -2227,10 +2226,10 @@ footer h4 {
 	display: inline-block;
 	width: 100%;
 }
-.latest-work .col-4 .item {
+.latest-work .col-4 .item2 {
 	width: 50%;
 }
-.gal-item img {
+.gal-item2 img {
 	width: 100%;
 }
 .latest-work .filter {
@@ -2265,7 +2264,7 @@ footer h4 {
 .services .nav-tabs li .img-responsive {
 	height: 180px;
 }
-.latest-work .col-4 .item {
+.latest-work .col-4 .item2 {
 	width: 100%;
 }
 .team ul li {
@@ -2296,20 +2295,20 @@ footer h4 {
 .tp-banner .text-white {
 font-size:2px;
 }
-.gal-item {
-	width:80%;
-	height: auto;
+.gal-item2 {
+	width:80% !important;
+	height: auto !important;
 }
-div .row .items .item {
+div .row .items2 .item2 {
 width:100%;
 display: block;
 margin-left: 30px;
 }
-.row .item .gal-item img {
-width:10px;
-height: 10px;
+.row .item2 .gal-item2 img {
+
+height:100px !important;
 }
-.latest-work .col-4 .item {
+.latest-work .col-4 .item2 {
 	width: 25%;
 	padding:5px;
 }
@@ -2323,7 +2322,7 @@ height: 10px;
 .row hr {
 	margin-left: 26px;
 }
-.gal-item .hover-info {
+.gal-item2 .hover-info {
 	position: absolute;
 	background: rgba(51,51,51,0.9);
 	z-index: 9;
@@ -2341,19 +2340,19 @@ height: 10px;
 	-ms-transition: all 0.4s ease-in-out;
 	transition: all 0.4s ease-in-out;
 }
-.gal-item .hover-info h6{
+.gal-item2 .hover-info h6{
 	font-weight:200;
 	color:#fff;
 	margin:0px;
 	margin-bottom:6px;
 	font-size:8.5px;	
 }
-.gal-item .hover-info p{
+.gal-item2 .hover-info p{
 	color:#fff;
 	margin:0px;
 	font-size:10px;	
 }
-.gal-item .hover-info a {
+.gal-item2 .hover-info a {
 	color: rgba(255,255,255,0.8);
 	font-size: 16px;
 	display: inline-block;
@@ -2486,24 +2485,24 @@ footer h6 {
 .row hr {
 	margin-left: 26px;
 }
-.items {
+.items2 {
 	width: 90%;
 	margin: 0;
 	padding: 0;
 }
-.gal-item {
+.gal-item2 {
 	width:90%;
 	margin:8px;
 	padding:0;
 	height: auto;
 }
-div .row .items .item {
+div .row .items2 .item2 {
 width:100%;
 display: block;
 margin-left: 30px;
 }
 
-.gal-item .hover-info {
+.gal-item2 .hover-info {
 	position: absolute;
 	background: rgba(51,51,51,0.9);
 	z-index: 9;
@@ -2521,19 +2520,19 @@ margin-left: 30px;
 	-ms-transition: all 0.4s ease-in-out;
 	transition: all 0.4s ease-in-out;
 }
-.gal-item .hover-info h6 {
+.gal-item2 .hover-info h6 {
 	font-weight:200;
 	color:#fff;
 	margin:0px;
 	margin-bottom:6px;
 	font-size:8.5px;	
 }
-.gal-item .hover-info p{
+.gal-item2 .hover-info p{
 	color:#fff;
 	margin:0px;
 	font-size:10px;	
 }
-.gal-item .hover-info a {
+.gal-item2 .hover-info a {
 	color: rgba(255,255,255,0.8);
 	font-size: 16px;
 	display: inline-block;
@@ -2563,13 +2562,13 @@ margin-left: 30px;
 	padding: 15px;
 	margin: 0;
 }
-.clients .item li img {
+.clients .item3 li img {
 	width:33%;
 }
-.clients .item .clientimg1 {
+.clients .item3 .clientimg1 {
 	width:50%;
 }
-.clients .item .clientimg2 {
+.clients .item3 .clientimg2 {
 height:40px;
 width:100px;
 }
@@ -2700,18 +2699,34 @@ footer button{
 }
 
 @media (min-width:600px) and (max-width:800px) {
-div .row .items .item {
-width:90%;
-display: block;
+div .row .items .item2 {
+width:90% !important;
+display: block !important;
 
 }
 }
 
-@media (min-width:800px) and (max-width:1080px) {
-div .row .items .item {
-width:90%;
-display: block;
-height:300px;
+@media (min-width:800px) and (max-width:1000px) {
+div .row .items2 .item2 {
+width:90% !important;
+display: block !important;
+height:300px !important;
+}
+}
+
+@media (min-width:500px) and (max-width:800px) {
+div .row .items2 .item2 {
+width:95% !important;
+display: block !important;
+height:300px !important;
+}
+}
+
+@media (min-width:290px) and (max-width:500px) {
+div .row .items2 .item2 {
+width:75% !important;
+display: block !important;
+height:300px !important;
 }
 }
 
@@ -2769,14 +2784,14 @@ margin:22px;
 	letter-spacing: 3px;
 }
 
-.row .items li {
- width:48%;
- border:0.5px solid #ddd;
- box-shadow:0px 2px 12px 0px grey;
-margin-bottom:20px;
-padding:10px;
-margin-right:20px;
-border-radius: 8px;
+.row .items2 li {
+ width:48% !important;
+ border:0.5px solid #ddd !important;
+ box-shadow:0px 2px 12px 0px grey !important;
+margin-bottom:20px !important;
+padding:10px !important;
+margin-right:20px !important;
+border-radius: 8px !important;
 }
 
 .container .testimonials h5 {
@@ -2813,7 +2828,7 @@ font-size: 22px;
 font-family: monospace;
 color:rgb(48, 90, 107);
 }
-.items .gal-item p {
+.items2 .gal-item2 p {
 font-size:18.5px;
 }
 
@@ -3062,10 +3077,10 @@ header {
 				<h3>Our <span style="color:#1aa6be">Services</span></h3>  
 				<hr style="width:80px;height:2px;background:#1aa6be">
 				
-				<ul class="items col-4 row">
+				<ul class="items2 col-4 row">
 					<!-- ITEM -->
-					<li class="item col-md-4">
-					  <div class="gal-item"> 
+					<li class="item2 col-md-4">
+					  <div class="gal-item2"> 
 						<!-- GALLERY IMAGE --> 
 						<img src="images/frametechsteels1jpg.jpg" alt="" style="width:100%;height:220px;border-radius:6px;" class="img-responsive"> 
 						<!-- Hover Info -->
@@ -3078,8 +3093,8 @@ header {
 					  </div>
 					</li>
 
-					<li class="item col-md-4">
-						<div class="gal-item"> 
+					<li class="item2 col-md-4">
+						<div class="gal-item2"> 
 						  <!-- GALLERY IMAGE --> 
 						  <img src="images/commercial-building.jpg" style="width:100%;height:220px;border-radius:6px;" alt="" class="img-responsive"> 
 						  <!-- Hover Info -->
@@ -3092,8 +3107,8 @@ header {
 						</div>
 				    </li>
 
-					<li class="item col-md-4">
-						<div class="gal-item"> 
+					<li class="item2 col-md-4">
+						<div class="gal-item2"> 
 						  <!-- GALLERY IMAGE --> 
 						  <img src="images/industrial-buildings.jpg" style="width:100%;height:220px;border-radius:6px;" alt="" class="img-responsive"> 
 						  <!-- Hover Info -->
@@ -3106,8 +3121,8 @@ header {
 						</div>
 					  </li>
 
-					  <li class="item col-md-4">
-						<div class="gal-item"> 
+					  <li class="item2 col-md-4">
+						<div class="gal-item2"> 
 						  <!-- GALLERY IMAGE --> 
 						  <img src="images/Roofing-Solutions.jpg" style="width:100%;height:220px;border-radius:6px;" alt="" class="img-responsive"> 
 						  <!-- Hover Info -->
