--- a/index.html
+++ b/index.html
@@ -2419,16 +2419,16 @@ margin: 0;
 	font-weight: lighter;
 	font-size: 25px;	
 }
-.container .item h6.client-heading  {
+.container .item3 h6.client-heading  {
 font-size:15px;
 }
-.clients .item li img:not(.clientimg) {
+.clients .item3 li img:not(.clientimg) {
 	width:45%;
 }
-.clients .item li.clientimg img {
+.clients .item3 li.clientimg img {
 	width:32%;
 }
-.clients .item li.clientimg a {
+.clients .item3 li.clientimg a {
 	font-size: 8px;
 }
 .clients li a {
@@ -3234,7 +3234,7 @@ row {
       <div class="container">
 		<h6 class="client-heading"><u>Clients</u></h6>
         <div class="single-slide" style="border:1.2px dashed rgb(4, 99, 99);border-radius: 12px;">
-          <div class="item">
+          <div class="item3">
 			
 			<ul class="row margin-top-5" style="margin-bottom:2px;"">
 				<li> <a href="#."><img src="" width="180px" class="clientimg1"><br>Orlando Enterprises</a></li>
@@ -3244,7 +3244,7 @@ row {
             
           </div>
 
-          <div class="item">
+          <div class="item3">
 			
             <ul class="row margin-top-5" style="margin-bottom:14px;">
               <li class="clientimg"> <a href="#."><img src="images/kohinoor.webp" width="80px"><br>Bhagwathi Beverages</a> </li>
@@ -3253,7 +3253,7 @@ row {
             </ul>
           </div>
 
-		  <div class="item">
+		  <div class="item3">
 			
             <ul class="row margin-top-5">
               <li> <a href="#."><img class="clientimg2"><br>Prabhu Steels</a></li>
@@ -3262,7 +3262,7 @@ row {
             </ul>
           </div>
 		  
-		  <div class="item">
+		  <div class="item3">
 			
             <ul class="row margin-top-5">
 				<li> <a href="#."><img src="images/acc.png" width="100px"><br>Dhaan Ispat</a></li>
