--- a/index.html
+++ b/index.html
@@ -3133,7 +3133,7 @@ row {
 					<li class="item2 col-md-4">
 					  <div class="gal-item2"> 
 						<!-- GALLERY IMAGE --> 
-						<img src="images/frametechsteels1jpg.jpg" alt="" style="width:100%;height:220px;border-radius:6px;" class="img-responsive"> 
+						<img src="images/peb2.jpg" alt="" style="width:100%;height:220px;border-radius:6px;" class="img-responsive"> 
 						<!-- Hover Info -->
 						<div class="hover-info">
 						  <h6>Pre-Engineered Building</h6>
