--- a/services.html
+++ b/services.html
@@ -301,7 +301,7 @@ letter-spacing: 1px;
 @media (min-width:660px) {
   .item {
   width: 54rem !important;
-  height: 39rem !important;
+  height: 40rem !important;
 }
 .gal-item img {
   width:100%;
@@ -312,7 +312,7 @@ letter-spacing: 1px;
 @media (min-width:880px) {
   .item {
   width: 74rem !important;
-  height: 38rem !important;
+  height: 42rem !important;
 }
 .gal-item img {
   width:100%;
@@ -340,7 +340,23 @@ ul.row hr {
 	}
 }
 
+@media (min-width:300px) and (max-width:400px){ 
+   .servicesheading {
+  margin-left: 30px;
+}
+}
 
+@media (min-width:400px) and (max-width:800px){ 
+   .servicesheading {
+  margin-left: 40px;
+}
+}
+
+@media (min-width:800px) and (max-width:900px){ 
+   .servicesheading {
+  margin-left: 40px;
+}
+}
 </style>
 </head>
 <body>
@@ -424,7 +440,7 @@ ul.row hr {
         <div class="row">
             <div class="col-md-8">
               <ul class="row">
-                  <h3><span style="text-decoration:underline;color:#1aa5be;letter-spacing:1px;font-weight:normal;">Services</span></h3>  
+                  <h3 class="servicesheading"><span style="text-decoration:underline;color:#1aa5be;letter-spacing:1px;font-weight:normal;">Services</span></h3>  
                   <br>
                   
                   <ul class="items col-4 row">
