--- a/about.html
+++ b/about.html
@@ -392,7 +392,7 @@ margin-left: 12px;
           <ul class="nav ownmenu">
             <li> <a href="index.html">Home</a> </li>
             <li class="active"> <a href="about.html">About Us</a> </li> 
-            <li> <a href="services.html">Services &nbsp;&nbsp;</a>
+            <li> <a href="#">Services &nbsp;&nbsp;</a>
               <ul class="dropdown" style="border-radius: 6px;">
                 <li> <a href="peb.html">Pre engineered buildings</a> </li>
                 <li> <a href="commercialconstruction.html">Commercial Building Construction</a> </li>
@@ -495,17 +495,17 @@ margin-left: 12px;
         <li class="col-sm-4">
           <div class="icon"> <i class="fa fa-phone"></i> </div>
           <h6>24/7 SUPPORT</h6>
-          <p>+91 9846270185</p>
+          <p><a href="tel://919846270185" style="color:#fff">+91 9846270185</a></p>
         </li>
         <li class="col-sm-4">
           <div class="icon"> <i class="fa fa-envelope-o"></i> </div>
           <h6>EMAIL US</h6>
-          <p>crcochin@gmail.com</p>
+          <p><a href="mailto:crcochin@gmail.com" style="color:#fff">crcochin@gmail.com</a></p>
         </li>
         <li class="col-sm-4">
           <div class="icon"> <i class="fa fa-clock-o"></i> </div>
           <h6>OPENING TIME</h6>
-          <p>Mon - Sat :  </p>
+          <p>Mon - Sat : 8:00 - 5:00  </p>
         </li>
       </ul>
     </div>
@@ -550,7 +550,7 @@ margin-left: 12px;
           <div style="background: darkgrey;width:120px;height: 1px;"> </div><br>
           <ul class="row location">
             <li class="col-xs-12">
-              <p style="font-family: 'Segoe UI', Tahoma, Geneva"> Monday to Saturday :</p>
+              <p style="font-family: 'Segoe UI', Tahoma, Geneva"> Mon to Sat - 8 AM To 5 PM</p>
             </li>
             <li class="col-xs-12">
               <p style="font-family: 'Segoe UI', Tahoma, Geneva">Sunday : Closed</p>
@@ -577,7 +577,7 @@ margin-left: 12px;
   
   <!-- RIGHTS -->
   <div class="rights">
-    <p style="font-family: 'Segoe UI', Tahoma, Geneva"> Copyright &copy; 2015    All Rights Reserved </p>
+    <p style="font-family: 'Segoe UI', Tahoma, Geneva"> Copyright &copy; 2023    All Rights Reserved </p>
   </div>
 </div>
 <script src="js/jquery-1.11.0.min.js"></script> 
