--- a/gallery.html
+++ b/gallery.html
@@ -95,12 +95,7 @@ section .container-gal {
 }
 
 section .container-gal ul {
-  
-  border:0.5px solid #ddd;
-  box-shadow:0px 2px 12px 0px grey;
   border-radius: 3px;
-  
-  background: #eaeff0;
   text-align: center;
 }
 
@@ -222,7 +217,7 @@ border-bottom:1px solid grey;
           <ul class="nav ownmenu">
             <li> <a href="index.html">Home</a> </li>
             <li> <a href="about.html">About us</a> </li>
-            <li> <a href="services.html">Services &nbsp;&nbsp;</a>
+            <li> <a href="#">Services &nbsp;&nbsp;</a>
               <ul class="dropdown">
                 <li> <a href="peb.html">Pre engineered buildings</a> </li>
                 <li> <a href="commercialconstruction.html">Commercial Building Construction</a> </li>
@@ -268,7 +263,9 @@ border-bottom:1px solid grey;
             <!-- ITEM -->
             <li class="item col-md-4 building construction renovate">
               <div class="gal-item"> 
-                <img src="images/IMG_0813[166].jpeg" alt="" class="img-responsive"> 
+                <a href="images/IMG_0813[166].jpeg">
+                <img src="images/IMG_0813[166].jpeg" alt="" class="img-responsive">
+                </a> 
               </div>
             </li>
 
@@ -276,7 +273,9 @@ border-bottom:1px solid grey;
             <li class="item col-md-4  construction">
               <div class="gal-item"> 
                 <!-- GALLERY IMAGE --> 
+                <a href="images/IMG_0816[162].jpeg">
                 <img src="images/IMG_0816[162].jpeg" alt="" class="img-responsive"> 
+                </a>
               </div>
             </li>
 
@@ -284,7 +283,9 @@ border-bottom:1px solid grey;
             <li class="item col-md-4 interio renovate">
               <div class="gal-item"> 
                 <!-- GALLERY IMAGE --> 
+                <a href="images/IMG_0818[171].jpeg">
                 <img src="images/IMG_0818[171].jpeg" alt="" class="img-responsive"> 
+                </a>
               </div>
             </li>
 
@@ -292,14 +293,18 @@ border-bottom:1px solid grey;
             <li class="item col-md-4 interior building construction">
               <div class="gal-item"> 
                 <!-- GALLERY IMAGE --> 
+                <a href="images/IMG_0811[163].jpeg">
                 <img src="images/IMG_0811[163].jpeg" alt="" class="img-responsive"> 
+                </a>
               </div>
             </li>
             <!-- ITEM -->
             <li class="item col-md-4 building construction renovate">
               <div class="gal-item"> 
                 <!-- GALLERY IMAGE --> 
+                <a href="images/IMG_0821[169].jpeg">
                 <img src="images/IMG_0821[169].jpeg" alt="" class="img-responsive"> 
+                </a>
               </div>
             </li>
 
@@ -307,7 +312,9 @@ border-bottom:1px solid grey;
             <li class="item col-md-4  construction">
               <div class="gal-item"> 
                 <!-- GALLERY IMAGE --> 
+                <a href="images/IMG_0830[170].jpeg">
                 <img src="images/IMG_0830[170].jpeg" alt="" class="img-responsive"> 
+                </a>
               </div>
             </li>
 
@@ -315,7 +322,9 @@ border-bottom:1px solid grey;
             <li class="item col-md-4 interio renovate">
               <div class="gal-item"> 
                 <!-- GALLERY IMAGE --> 
+                <a href="images/IMG_0832[175].jpeg">
                 <img src="images/IMG_0832[175].jpeg" alt="" class="img-responsive"> 
+                </a>
               </div>
             </li>
 
@@ -323,7 +332,9 @@ border-bottom:1px solid grey;
             <li class="item col-md-4 interior building construction">
               <div class="gal-item"> 
                 <!-- GALLERY IMAGE --> 
+                <a href="images/IMG_0834[168].jpeg">
                 <img src="images/IMG_0834[168].jpeg" alt="" class="img-responsive"> 
+                </a>
               </div>
             </li>
             
@@ -331,15 +342,19 @@ border-bottom:1px solid grey;
             <li class="item col-md-4 building construction renovate">
               <div class="gal-item"> 
                 <!-- GALLERY IMAGE --> 
+                <a href="images/IMG_0837[172].jpeg">
                 <img src="images/IMG_0837[172].jpeg" alt="" class="img-responsive"> 
+                </a>
               </div>
             </li>
 
             <!-- ITEM -->
             <li class="item col-md-4  construction">
               <div class="gal-item"> 
-                <!-- GALLERY IMAGE --> 
+                <!-- GALLERY IMAGE -->
+                <a href="images/projctimg.jfif"> 
                 <img src="images/projctimg.jfif" alt="" class="img-responsive"> 
+                </a>
               </div>
             </li>
 
@@ -347,15 +362,19 @@ border-bottom:1px solid grey;
             <li class="item col-md-4 interio renovate">
               <div class="gal-item"> 
                 <!-- GALLERY IMAGE --> 
-                <img src="images/3f823[165].jpeg" alt="" class="img-responsive" style="height: 178px;"> 
+                <a href="images/3f823[165].jpeg">
+                <img src="images/3f823[165].jpeg" alt="" class="img-responsive" style="height: 193px;"> 
+                </a>
               </div>
             </li>
 
              <!-- ITEM -->
              <li class="item col-md-4 interio renovate">
               <div class="gal-item"> 
-                <!-- GALLERY IMAGE --> 
-                <img src="images/img21.jpg" alt="" class="img-responsive" style="height: 178px;"> 
+                <!-- GALLERY IMAGE -->
+                <a href="images/img21.jpg"> 
+                <img src="images/img21.jpg" alt="" class="img-responsive" style="height: 193px;"> 
+                </a>
               </div><br>
             </li>
             
@@ -363,7 +382,9 @@ border-bottom:1px solid grey;
             <li class="item col-md-4 interio renovate">
               <div class="gal-item"> 
                 <!-- GALLERY IMAGE --> 
+                <a href="images/WhatsAppimg.jpeg">
                 <img src="images/WhatsAppimg.jpeg" alt="" class="img-responsive"> 
+                </a>
               </div><br>
             </li>
 
@@ -371,14 +392,18 @@ border-bottom:1px solid grey;
             <li class="item col-md-4 interio renovate">
               <div class="gal-item"> 
                 <!-- GALLERY IMAGE --> 
-                <img src="images/dcd058ad-402b-437c-be29-067b1899954e[164].jpeg" style="height:178px" alt="" class="img-responsive"> 
+                <a href="images/dcd058ad-402b-437c-be29-067b1899954e[164].jpeg">
+                <img src="images/dcd058ad-402b-437c-be29-067b1899954e[164].jpeg" style="height:193px" alt="" class="img-responsive"> 
+                </a>
               </div><br>
             </li>
 
             <li class="item col-md-4 interio renovate">
               <div class="gal-item"> 
-                <!-- GALLERY IMAGE --> 
-                <img src="images/IMG_0836[173].jpeg" style="height:178px;" alt="" class="img-responsive"> 
+                <!-- GALLERY IMAGE -->
+                <a href="images/IMG_0836[173].jpeg"> 
+                <img src="images/IMG_0836[173].jpeg" style="height:193px;" alt="" class="img-responsive"> 
+                </a>
               </div>
             </li>           
           </ul>
@@ -396,17 +421,17 @@ border-bottom:1px solid grey;
         <li class="col-sm-4">
           <div class="icon"> <i class="fa fa-phone"></i> </div>
           <h6>24/7 SUPPORT</h6>
-          <p>+91 9846270185</p>
+          <p><a href="tel://919846270185" style="color:#fff">+91 9846270185</a></p>
         </li>
         <li class="col-sm-4">
           <div class="icon"> <i class="fa fa-envelope-o"></i> </div>
           <h6>Email us</h6>
-          <p>crcochin@gmail.com</p>
+          <p><a href="mailto:crcochin@gmail.com" style="color:#fff">crcochin@gmail.com</a></p>
         </li>
         <li class="col-sm-4">
           <div class="icon"> <i class="fa fa-clock-o"></i> </div>
           <h6>Opening Time</h6>
-          <p>Mon - Sat :</p>
+          <p>Mon - Sat : 8:00 - 5:00</p>
         </li>
       </ul>
     </div>
@@ -450,7 +475,7 @@ border-bottom:1px solid grey;
           <div style="background: darkgrey;width:120px;height: 1px;"> </div><br>
           <ul class="row location">
             <li class="col-xs-12">
-              <p style="font-size:16px;font-family: 'Segoe UI', Tahoma, Geneva"> Monday to Saturday :</p>
+              <p style="font-size:16px;font-family: 'Segoe UI', Tahoma, Geneva"> Mon to Sat - 8 AM To 5 PM</p>
             </li>
             <li class="col-xs-12">
               <p style="font-size:16px;font-family: 'Segoe UI', Tahoma, Geneva">Sunday : Closed</p>
@@ -477,7 +502,7 @@ border-bottom:1px solid grey;
   
   <!-- RIGHTS -->
   <div class="rights">
-    <p style="font-size:16px;font-family: 'Segoe UI', Tahoma, Geneva"> Copyright &copy; 2015    All Rights Reserved </p>
+    <p style="font-size:16px;font-family: 'Segoe UI', Tahoma, Geneva"> Copyright &copy; 2023    All Rights Reserved </p>
   </div>
 </div>
 <script src="js/jquery-1.11.0.min.js"></script> 
