--- a/index.html
+++ b/index.html
@@ -2835,17 +2835,19 @@ color:rgb(48, 90, 107);
 	font-weight: bold;
 font-family: monospace;
 color:rgb(48, 90, 107);
-text-align:justify;
-letter-spacing: 1.5px;
+text-align:center;
+letter-spacing: 1px;
 font-size: 16.5px;
 }
 
 .container .testimonials span {
-	font-weight: bold;font-size:40px;color:black;line-height:24px;
+	font-weight: bold;font-size:34px;color:black;line-height:24px;
 }
 .container .testimonials .chairman {
 	font-size:16px;
 	letter-spacing: 1.2px;
+	color: dimgrey;
+
 }
 
 .clients h6 {
@@ -2962,10 +2964,10 @@ row {
           <ul class="nav ownmenu">
             <li class="active"> <a href="index.html">Home</a> </li>
             <li> <a href="about.html">About us</a> </li>
-			<li> <a href="services.html">Services &nbsp;&nbsp;</a>            
+			<li> <a href="#">Services &nbsp;&nbsp;</a>            
               <ul class="dropdown">
 			   <li class="displayvis"> <a href="peb.html">Pre engineered buildings</a> </li>
-			   <li  class="displayvis"> <a href="commercialconstruction.html">Commercial Building Construction</a> </li>
+			   <li class="displayvis"> <a href="commercialconstruction.html">Commercial Building Construction</a> </li>
 			   <li class="displayvis"> <a href="industrialandwarehouse.html">Industrial & Warehouse Building Construction</a> </li>
                <li class="displayvis"> <a href="sheeting.html" style="border-bottom:none;">Sheeting</a> </li>
               </ul > 
@@ -3214,17 +3216,58 @@ row {
 		</p>
 		</div>
  
-        <section class="welcome" style="background: #f1f1f1;">
+       <!-- <section class="welcome" >
 			<div class="container"> 
 				<div class="testimonials">
 				<h5><u>TESTIMONIALS</u></h5><br>
 				<p><span>&OpenCurlyDoubleQuote;</span>One of the best and leading steel structure company in Kerala.Best service and on time finishing.
 					<br>We are highly pleased with their services.I would strongly recommend Govind and company to everyone.<sub>
 					<span>&CloseCurlyDoubleQuote;</span></sub><br>
-					<p class="chairman">CHAIRMAN<br>R1 INTERNATIONAL,PERUMBAVOOR
-					</p><br>
+					<p class="chairman">CHAIRMAN<br>R1 INTERNATIONAL,PERUMBAVOOR 
+					</p>
+					<img src="images/Rating/rating (2).png">
+					
 			    </p>
 				</div>
+			</div>
+		</section> -->
+
+		<section class="clients" style="background: #f1f1f1;">
+			<br><br> 
+			<div class="container">
+			<div class="testimonials">
+			  <h6 class="client-heading"><u>Testimonials</u></h6>
+			  <div class="single-slide">
+				<div class="item3">
+
+					<p><span>&OpenCurlyDoubleQuote;</span>One of the best and leading steel structure company in Kerala.Best service and on time finishing.
+						We are highly pleased with their services.I would strongly recommend Govind and company to everyone.
+						<sub>
+						<span>&CloseCurlyDoubleQuote;</span></sub><br>
+						<p class="chairman">CHAIRMAN<br>R1 INTERNATIONAL,PERUMBAVOOR 
+						</p>
+						<div align="center">
+						<img src="images/Rating/rating (1).png" width="80px">
+						</div>
+					</p>
+
+				</div>
+				<div class="item3">
+			
+					<p><span>&OpenCurlyDoubleQuote;</span>It gives us immense pleasure to certify that Govind steel team has done a commendable job on our project.
+						We’re convinced that they can handle a project of any magnitude. We will not hesitate to recommend it to others. <sub>
+					<span>&CloseCurlyDoubleQuote;</span></sub><br>
+					<p class="chairman">CHAIRMAN<br>FRONTLINE DEVELOPERS 
+					</p>
+					<div align="center">
+					<img src="images/Rating/rating (1).png" width="80px">
+					</div>
+			    	</p>
+
+				  </div>
+				
+			  </div>	
+			</div>
 			</div>
 		</section>
 
@@ -3233,10 +3276,10 @@ row {
 	  <br><br> 
       <div class="container">
 		<h6 class="client-heading"><u>Clients</u></h6>
-        <div class="single-slide" style="border:1.2px dashed rgb(4, 99, 99);border-radius: 12px;">
+        <div class="single-slide">
           <div class="item3">
 			
-			<ul class="row margin-top-5" style="margin-bottom:2px;"">
+			<ul class="row margin-top-5" style="margin-bottom:2px;">
 				<li> <a href="#."><img src="" width="180px" class="clientimg1"><br>Orlando Enterprises</a></li>
 				<li> <a href="#."><img src="images/vtuff-glass.jpg" width="180px" class="clientimg1"><br>V Tough Glass</a></li>
 				<li> <a href="#."><img src="images/vtuff-glass.jpg" width="180px" class="clientimg1"><br>Furnace Fabrica</a></li> 
@@ -3283,17 +3326,17 @@ row {
         <li class="col-sm-4">
           <div class="icon"> <i class="fa fa-phone"></i> </div>
           <h6>24/7 SUPPORT</h6>
-          <p>+91 9846270185</p>
+          <p><a href="tel://919846270185" style="color:#fff">+91 9846270185</a></p>
         </li>
         <li class="col-sm-4">
           <div class="icon"> <i class="fa fa-envelope-o"></i> </div>
           <h6>Email us</h6>
-          <p>crcochin@gmail.com </p>
+          <p><a href="mailto:crcochin@gmail.com" style="color:#fff">crcochin@gmail.com</a></p>
         </li>
         <li class="col-sm-4">
           <div class="icon"> <i class="fa fa-clock-o"></i> </div>
           <h6>Opening Time</h6>
-          <p>Mon - Sat :</p>
+          <p>Mon - Sat : 8:00 - 5:00</p>
         </li>
       </ul>
     </div>
@@ -3337,7 +3380,7 @@ row {
           <div style="background: darkgrey;width:120px;height: 1px;"> </div><br>
           <ul class="row location">
             <li class="col-xs-12">
-              <p style="font-family: 'Segoe UI', Tahoma, Geneva"> Monday to Saturday :</p>
+              <p style="font-family: 'Segoe UI', Tahoma, Geneva"> Mon to Sat - 8 AM To 5 PM</p>
             </li>
             <li class="col-xs-12">
               <p style="font-family: 'Segoe UI', Tahoma, Geneva">Sunday : Closed</p>
@@ -3364,7 +3407,7 @@ row {
   
   <!-- RIGHTS -->
   <div class="rights">
-    <p style="font-family: 'Segoe UI', Tahoma, Geneva"> Copyright &copy; 2015  All Rights Reserved </p>
+    <p style="font-family: 'Segoe UI', Tahoma, Geneva"> Copyright &copy; 2023  All Rights Reserved </p>
   </div>
 </div>
 <script src="js/jquery-1.11.0.min.js"></script> 
