--- a/sheeting.html
+++ b/sheeting.html
@@ -359,7 +359,7 @@ color:black;
           <ul class="nav ownmenu">
             <li> <a href="index.html">Home</a> </li>
             <li> <a href="about.html">About us</a> </li>
-            <li  class="active"> <a href="services.html">Services &nbsp;&nbsp;</a>
+            <li  class="active"> <a href="#">Services &nbsp;&nbsp;</a>
               <ul class="dropdown" style="border-radius: 6px;">
                 <li> <a href="peb.html">Pre engineered buildings</a> </li>
                 <li> <a href="commercialconstruction.html">Commercial Building Construction</a> </li>
@@ -405,7 +405,7 @@ color:black;
         <div class="row">
 
               <ul class="row">
-                  <h4 style="text-align: center;"><span style="color:#1aa5be;text-decoration: underline;">Services</span></h4>  
+                 <!-- <h4 style="text-align: center;"><span style="color:#1aa5be;text-decoration: underline;">Services</span></h4>  -->
                   <br>
                   
                     <ul class="items col-4 row">
@@ -456,17 +456,17 @@ color:black;
         <li class="col-sm-4">
           <div class="icon"> <i class="fa fa-phone"></i> </div>
           <h6>24/7 SUPPORT</h6>
-          <p>+91 9846270185</p>
+          <p><a href="tel://919846270185" style="color:#fff">+91 9846270185</a></p>
         </li>
         <li class="col-sm-4">
           <div class="icon"> <i class="fa fa-envelope-o"></i> </div>
           <h6>Email us</h6>
-          <p>crcochin@gmail.com</p>
+          <p><a href="mailto:crcochin@gmail.com" style="color:#fff">crcochin@gmail.com</a></p>
         </li>
         <li class="col-sm-4">
           <div class="icon"> <i class="fa fa-clock-o"></i> </div>
           <h6>Opening Time</h6>
-          <p>Mon - Sat : </p>
+          <p>Mon - Sat : 8:00 - 5:00</p>
         </li>
       </ul>
     </div>
@@ -510,7 +510,7 @@ color:black;
           <div style="background: darkgrey;width:120px;height: 1px;"> </div><br>
           <ul class="row location">
             <li class="col-xs-12">
-              <p style="font-size:16px;font-family: 'Segoe UI', Tahoma, Geneva"> Monday to Saturday :</p>
+              <p style="font-size:16px;font-family: 'Segoe UI', Tahoma, Geneva"> Mon to Sat - 8 AM To 5 PM</p>
             </li>
             <li class="col-xs-12">
               <p style="font-size:16px;font-family: 'Segoe UI', Tahoma, Geneva">Sunday : Closed</p>
@@ -537,7 +537,7 @@ color:black;
   
   <!-- RIGHTS -->
   <div class="rights">
-    <p style="font-size:16px;font-family: 'Segoe UI', Tahoma, Geneva"> Copyright &copy; 2015    All Rights Reserved </p>
+    <p style="font-size:16px;font-family: 'Segoe UI', Tahoma, Geneva"> Copyright &copy; 2023   All Rights Reserved </p>
   </div>
 </div>
 <script src="js/jquery-1.11.0.min.js"></script> 
