--- a/industrialandwarehouse.html
+++ b/industrialandwarehouse.html
@@ -356,7 +356,7 @@ border-radius:8px;
           <ul class="nav ownmenu">
             <li> <a href="index.html">Home</a> </li>
             <li> <a href="about.html">About us</a> </li>
-            <li  class="active"> <a href="services.html">Services &nbsp;&nbsp;</a>
+            <li  class="active"> <a href="#">Services &nbsp;&nbsp;</a>
               <ul class="dropdown" style="border-radius: 6px;">
                 <li> <a href="peb.html">Pre engineered buildings</a> </li>
                 <li> <a href="commercialconstruction.html">Commercial Building Construction</a> </li>
@@ -401,7 +401,7 @@ border-radius:8px;
         <div class="row">
 
               <ul class="row">
-                  <h4 style="text-align: center;"><span style="color:#1aa5be;text-decoration: underline;">Services</span></h4>  
+                 <!-- <h4 style="text-align: center;"><span style="color:#1aa5be;text-decoration: underline;">Services</span></h4> --> 
                   <br>
                   
                   <ul class="items col-4 row">
@@ -426,7 +426,7 @@ border-radius:8px;
                           Call us today for all your industrial construction needs.    
                         </p>    
                         <br>
-                        <img src="images/pexels-pixabay-236698.jpg" alt="" id="imgpeb" class="img-responsive"> 
+                        <img src="images/1234.jpg" alt="" id="imgpeb" class="img-responsive"> 
                         <img src="images/pexels-igor-starkov-1117452.jpg" alt="" class="img-responsive"> 
                         <img src="images/pexels-pixabay-209251.jpg" alt="" class="img-responsive"> 
 
@@ -453,17 +453,17 @@ border-radius:8px;
         <li class="col-sm-4">
           <div class="icon"> <i class="fa fa-phone"></i> </div>
           <h6>24/7 SUPPORT</h6>
-          <p>+91 9846270185</p>
+          <p><a href="tel://919846270185" style="color:#fff">+91 9846270185</a></p>
         </li>
         <li class="col-sm-4">
           <div class="icon"> <i class="fa fa-envelope-o"></i> </div>
           <h6>Email us</h6>
-          <p>crcochin@gmail.com</p>
+          <p><a href="mailto:crcochin@gmail.com" style="color:#fff">crcochin@gmail.com</a></p>
         </li>
         <li class="col-sm-4">
           <div class="icon"> <i class="fa fa-clock-o"></i> </div>
           <h6>Opening Time</h6>
-          <p>Mon - Sat : </p>
+          <p>Mon - Sat : 8:00 - 5:00</p>
         </li>
       </ul>
     </div>
@@ -507,7 +507,7 @@ border-radius:8px;
           <div style="background: darkgrey;width:120px;height: 1px;"> </div><br>
           <ul class="row location">
             <li class="col-xs-12">
-              <p style="font-size:16px;font-family: 'Segoe UI', Tahoma, Geneva"> Monday to Saturday :</p>
+              <p style="font-size:16px;font-family: 'Segoe UI', Tahoma, Geneva"> Mon to Sat - 8 AM To 5 PM</p>
             </li>
             <li class="col-xs-12">
               <p style="font-size:16px;font-family: 'Segoe UI', Tahoma, Geneva">Sunday : Closed</p>
@@ -534,7 +534,7 @@ border-radius:8px;
   
   <!-- RIGHTS -->
   <div class="rights">
-    <p style="font-size:16px;font-family: 'Segoe UI', Tahoma, Geneva"> Copyright &copy; 2015    All Rights Reserved </p>
+    <p style="font-size:16px;font-family: 'Segoe UI', Tahoma, Geneva"> Copyright &copy; 2023    All Rights Reserved </p>
   </div>
 </div>
 <script src="js/jquery-1.11.0.min.js"></script> 
