--- a/gallery.html
+++ b/gallery.html
@@ -263,8 +263,8 @@ border-bottom:1px solid grey;
             <!-- ITEM -->
             <li class="item col-md-4 building construction renovate">
               <div class="gal-item"> 
-                <a href="images/IMG_0813[166].jpeg">
-                <img src="images/IMG_0813[166].jpeg" alt="" class="img-responsive">
+                <a href="images/IMG_0813[166].webp">
+                <img src="images/IMG_0813[166].webp" alt="" class="img-responsive">
                 </a> 
               </div>
             </li>
@@ -302,8 +302,8 @@ border-bottom:1px solid grey;
             <li class="item col-md-4 building construction renovate">
               <div class="gal-item"> 
                 <!-- GALLERY IMAGE --> 
-                <a href="images/IMG_0821[169].jpeg">
-                <img src="images/IMG_0821[169].jpeg" alt="" class="img-responsive"> 
+                <a href="images/IMG_0821[169].webp">
+                <img src="images/IMG_0821[169].webp" alt="" class="img-responsive"> 
                 </a>
               </div>
             </li>
@@ -401,8 +401,8 @@ border-bottom:1px solid grey;
             <li class="item col-md-4 interio renovate">
               <div class="gal-item"> 
                 <!-- GALLERY IMAGE -->
-                <a href="images/IMG_0836[173].jpeg"> 
-                <img src="images/IMG_0836[173].jpeg" style="height:193px;" alt="" class="img-responsive"> 
+                <a href="images/IMG_0836[173].webp"> 
+                <img src="images/IMG_0836[173].webp" style="height:193px;" alt="" class="img-responsive"> 
                 </a>
               </div>
             </li>           
